# lib-holdings

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
lib_holdings/: __main__.py  api.py
tests/: README.md  configTEMPLATE.py  infile_ocns.csv  infile_symbols.csv  parse.py  test_click.py
