[tool.poetry]
name = "lib-holdings"
version = "1.0.0"
description = "CLI tool for retrieving holding counts for a list of OCNs and libraries"
authors = ["Max Paulus"]
readme = "README.md"
repository = "https://github.com/ubvu/lib-holdings"
license = "MIT"
packages = [{include = "lib_holdings"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
pandas = "^1.4.2"
requests = "^2.27.1"
requests-oauthlib = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
holdings = "lib_holdings.__main__:main"
